# gitrat

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: CI.yml
src/: app.rs  event_handler.rs  git.rs  main.rs  terminal.rs  types.rs  ui.rs
